feat: configure DigitalOcean Container Registry with knowted:staging and knowted:production tags
- Update backend workflow to tag images as knowted:staging/production
- Update AI agent workflow to tag images as knowted-aiagent:staging/production
- Add comprehensive DigitalOcean setup guide
- Configure multiple tags for flexibility (primary + tracking tags)

--- a/.github/workflows/aiagent.yml
+++ b/.github/workflows/aiagent.yml
@@ -11,6 +11,7 @@ on:
 env:
   REGISTRY: registry.digitalocean.com
   IMAGE_NAME: knowted-aiagent/app
+  REGISTRY_NAME: knowted
 
 jobs:
   test:
@@ -57,10 +58,15 @@ jobs:
           if [[ ${{ github.ref }} == 'refs/heads/production' ]]; then
             echo "ENVIRONMENT_TAG=production" >> $GITHUB_ENV
             echo "ENVIRONMENT_NAME=Production" >> $GITHUB_ENV
+            echo "REGISTRY_TAG=${{ env.REGISTRY_NAME }}/knowted-aiagent:production" >> $GITHUB_ENV
           elif [[ ${{ github.ref }} == 'refs/heads/dev' ]] || [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
             echo "ENVIRONMENT_TAG=dev" >> $GITHUB_ENV
             echo "ENVIRONMENT_NAME=Development" >> $GITHUB_ENV
+            echo "REGISTRY_TAG=${{ env.REGISTRY_NAME }}/knowted-aiagent:staging" >> $GITHUB_ENV
           fi
+          echo "📋 Deploying to: ${{ env.ENVIRONMENT_NAME }}"
+          echo "🏷️  Primary tag: ${{ env.REGISTRY }}/${{ env.REGISTRY_TAG }}"
+          echo "🏷️  Also tagged as: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -80,6 +86,7 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
+            ${{ env.REGISTRY }}/${{ env.REGISTRY_TAG }}
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}-${{ github.sha }}
           cache-from: type=gha
@@ -89,7 +96,8 @@ jobs:
         if: success()
         run: |
           echo "✅ Successfully pushed AI agent image to ${{ env.ENVIRONMENT_NAME }}!"
-          echo "🏷️  Image tagged as: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
+          echo "🏷️  Primary tag: ${{ env.REGISTRY }}/${{ env.REGISTRY_TAG }}"
+          echo "🏷️  Also tagged as: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
           echo "📦 SHA: ${{ github.sha }}"
           echo "🚀 Build completed at $(date)"
 
