fix: update cache-dependency-path format for Node.js setup

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -33,7 +33,8 @@ jobs:
         with:
           node-version: '20'
           cache: 'pnpm'
-          cache-dependency-path: server/pnpm-lock.yaml
+          cache-dependency-path: |
+            server/pnpm-lock.yaml
 
       - name: Install dependencies
         working-directory: ./server
