--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: ''
 
       - name: Install dependencies
         working-directory: ./server
