--- a/.github/workflows/aiagent.yml
+++ b/.github/workflows/aiagent.yml
@@ -1,4 +1,4 @@
-name: AI Agent Deployment
+name: AI Agent CI/CD Pipeline
 
 on:
   push:
@@ -66,7 +66,6 @@ jobs:
           fi
           echo "📋 Deploying to: ${{ env.ENVIRONMENT_NAME }}"
           echo "🏷️  Primary tag: ${{ env.REGISTRY }}/${{ env.REGISTRY_TAG }}"
-          echo "🏷️  Also tagged as: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -97,7 +96,4 @@ jobs:
         run: |
           echo "✅ Successfully pushed AI agent image to ${{ env.ENVIRONMENT_NAME }}!"
           echo "🏷️  Primary tag: ${{ env.REGISTRY }}/${{ env.REGISTRY_TAG }}"
-          echo "🏷️  Also tagged as: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
           echo "📦 SHA: ${{ github.sha }}"
-          echo "🚀 Build completed at $(date)"
-
