--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,4 +1,4 @@
-name: Backend Deployment
+name: Backend CI/CD Pipeline
 
 on:
   push:
@@ -46,6 +46,49 @@ jobs:
         working-directory: ./server
         run: pnpm test:ci
 
+  migrate:
+    name: Run Database Migrations
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: |
+      (github.ref == 'refs/heads/dev' && contains(github.event.head_commit.message, 'migration') == false) ||
+      (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'migrate')
+    environment: ${{ github.ref == 'refs/heads/production' && 'production' || 'development' }}
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: ''
+
+      - name: Install dependencies
+        working-directory: ./server
+        run: pnpm install --frozen-lockfile
+
+      - name: Run database migrations
+        working-directory: ./server
+        env:
+          NODE_ENV: ${{ github.ref == 'refs/heads/production' && 'production' || 'development' }}
+          DB_HOST: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_HOST || secrets.DEV_DB_HOST }}
+          DB_PORT: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_PORT || secrets.DEV_DB_PORT }}
+          DB_USERNAME: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_USERNAME || secrets.DEV_DB_USERNAME }}
+          DB_PASSWORD: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_PASSWORD || secrets.DEV_DB_PASSWORD }}
+          DB_DATABASE: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_DATABASE || secrets.DEV_DB_DATABASE }}
+        run: |
+          echo "🗄️ Running database migrations..."
+          npm run typeorm -- migration:run -d typeorm.config.ts
+          echo "✅ Migrations completed!"
+
   build-and-push:
     name: Build and Deploy Backend
     runs-on: ubuntu-latest
@@ -70,7 +113,6 @@ jobs:
           fi
           echo "📋 Deploying to: ${{ env.ENVIRONMENT_NAME }}"
           echo "🏷️  Primary tag: ${{ env.REGISTRY }}/${{ env.REGISTRY_TAG }}"
-          echo "🏷️  Also tagged as: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -101,7 +143,4 @@ jobs:
         run: |
           echo "✅ Successfully pushed backend image to ${{ env.ENVIRONMENT_NAME }}!"
           echo "🏷️  Primary tag: ${{ env.REGISTRY }}/${{ env.REGISTRY_TAG }}"
-          echo "🏷️  Also tagged as: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
           echo "📦 SHA: ${{ github.sha }}"
-          echo "🚀 Build completed at $(date)"
-
