--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,11 @@
 {
+  "buildCommand": "pnpm build",
+  "outputDirectory": "dist",
+  "installCommand": "pnpm install",
   "rewrites": [
     {
       "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
-} 
+}
