chore: fix frontend, remove cicd for frontend

--- a/aiagent/Dockerfile
+++ b/aiagent/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /app
 # Install system dependencies
 RUN apt-get update && apt-get install -y \
     gcc \
+    g++ \
     postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
@@ -20,14 +21,12 @@ RUN pip install --no-cache-dir --upgrade pip && \
 # Copy application code
 COPY . .
 
-# Expose the port LangGraph runs on
+# Expose LangGraph API port
 EXPOSE 2024
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD python -c "import httpx; httpx.get('http://localhost:2024/health', timeout=5)" || exit 1
+  CMD python -c "import httpx; httpx.get('http://localhost:2024/health', timeout=5)" || exit 1
 
-# Run LangGraph server
-# Use 'start' for production, 'dev' for development
+# Run LangGraph server (use 'start' for production, 'dev' for development)
 CMD ["langgraph", "start", "--host", "0.0.0.0", "--port", "2024"]
-
