--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -79,11 +79,11 @@ jobs:
         working-directory: ./server
         env:
           NODE_ENV: ${{ github.ref == 'refs/heads/production' && 'production' || 'development' }}
-          DB_HOST: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_HOST || secrets.DEV_DB_HOST }}
-          DB_PORT: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_PORT || secrets.DEV_DB_PORT }}
-          DB_USERNAME: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_USERNAME || secrets.DEV_DB_USERNAME }}
-          DB_PASSWORD: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_PASSWORD || secrets.DEV_DB_PASSWORD }}
-          DB_DATABASE: ${{ github.ref == 'refs/heads/production' && secrets.PROD_DB_DATABASE || secrets.DEV_DB_DATABASE }}
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_DATABASE: ${{ secrets.DB_DATABASE }}
         run: |
           echo "🗄️ Running database migrations..."
           npm run typeorm -- migration:run -d typeorm.config.ts
