--- a/.github/workflows/aiagent.yml
+++ b/.github/workflows/aiagent.yml
@@ -2,7 +2,7 @@ name: AI Agent CI/CD Pipeline
 
 on:
   push:
-    branches: [dev, develop, production]
+    branches: [staging, production]
     paths:
       - 'aiagent/**'
       - '.github/workflows/aiagent.yml'
@@ -46,8 +46,8 @@ jobs:
     name: Build and Deploy AI Agent
     runs-on: ubuntu-latest
     needs: [test]
-    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/production'
-    environment: ${{ github.ref == 'refs/heads/production' && 'production' || 'development' }}
+    if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/production'
+    environment: ${{ github.ref == 'refs/heads/production' && 'production' || 'staging' }}
     
     steps:
       - name: Checkout code
@@ -58,9 +58,9 @@ jobs:
           if [[ ${{ github.ref }} == 'refs/heads/production' ]]; then
             echo "ENVIRONMENT_TAG=production" >> $GITHUB_ENV
             echo "ENVIRONMENT_NAME=Production" >> $GITHUB_ENV
-          elif [[ ${{ github.ref }} == 'refs/heads/dev' ]] || [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
+          elif [[ ${{ github.ref }} == 'refs/heads/staging' ]]; then
             echo "ENVIRONMENT_TAG=staging" >> $GITHUB_ENV
-            echo "ENVIRONMENT_NAME=Development" >> $GITHUB_ENV
+            echo "ENVIRONMENT_NAME=Staging" >> $GITHUB_ENV
           fi
           echo "📋 Deploying to: ${{ env.ENVIRONMENT_NAME }}"
           echo "🏷️  Image will be tagged as: ${{ env.REGISTRY }}/${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
