--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -2,7 +2,7 @@ name: Backend CI/CD Pipeline
 
 on:
   push:
-    branches: [dev, develop, production]
+    branches: [staging, production]
     paths:
       - 'server/**'
       - '.github/workflows/backend.yml'
@@ -51,9 +51,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test]
     if: |
-      (github.ref == 'refs/heads/dev' && contains(github.event.head_commit.message, 'migration') == false) ||
+      (github.ref == 'refs/heads/staging' && contains(github.event.head_commit.message, 'migration') == false) ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'migrate')
-    environment: ${{ github.ref == 'refs/heads/production' && 'production' || 'development' }}
+    environment: ${{ github.ref == 'refs/heads/production' && 'production' || 'staging' }}
     
     steps:
       - name: Checkout code
@@ -78,7 +78,7 @@ jobs:
       - name: Run database migrations
         working-directory: ./server
         env:
-          NODE_ENV: ${{ github.ref == 'refs/heads/production' && 'production' || 'development' }}
+          NODE_ENV: ${{ github.ref == 'refs/heads/production' && 'production' || 'staging' }}
           DB_HOST: ${{ secrets.DB_HOST }}
           DB_PORT: ${{ secrets.DB_PORT }}
           DB_USERNAME: ${{ secrets.DB_USERNAME }}
@@ -93,8 +93,8 @@ jobs:
     name: Build and Deploy Backend
     runs-on: ubuntu-latest
     needs: [test]
-    if: github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/develop' || github.ref == 'refs/heads/production'
-    environment: ${{ github.ref == 'refs/heads/production' && 'production' || 'development' }}
+    if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/production'
+    environment: ${{ github.ref == 'refs/heads/production' && 'production' || 'staging' }}
     
     steps:
       - name: Checkout code
@@ -105,9 +105,9 @@ jobs:
           if [[ ${{ github.ref }} == 'refs/heads/production' ]]; then
             echo "ENVIRONMENT_TAG=production" >> $GITHUB_ENV
             echo "ENVIRONMENT_NAME=Production" >> $GITHUB_ENV
-          elif [[ ${{ github.ref }} == 'refs/heads/dev' ]] || [[ ${{ github.ref }} == 'refs/heads/develop' ]]; then
+          elif [[ ${{ github.ref }} == 'refs/heads/staging' ]]; then
             echo "ENVIRONMENT_TAG=staging" >> $GITHUB_ENV
-            echo "ENVIRONMENT_NAME=Development" >> $GITHUB_ENV
+            echo "ENVIRONMENT_NAME=Staging" >> $GITHUB_ENV
           fi
           echo "📋 Deploying to: ${{ env.ENVIRONMENT_NAME }}"
           echo "🏷️  Image will be tagged as: ${{ env.REGISTRY }}/${{ env.REGISTRY_NAME }}/${{ env.IMAGE_NAME }}:${{ env.ENVIRONMENT_TAG }}"
