--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -50,9 +50,7 @@ jobs:
     name: Run Database Migrations
     runs-on: ubuntu-latest
     needs: [test]
-    if: |
-      (github.ref == 'refs/heads/staging' && contains(github.event.head_commit.message, 'migration') == false) ||
-      (github.event_name == 'workflow_dispatch' && github.event.inputs.action == 'migrate')
+    if: github.ref == 'refs/heads/staging' || github.ref == 'refs/heads/production'
     environment: ${{ github.ref == 'refs/heads/production' && 'production' || 'staging' }}
     
     steps:
